# gemini-transcription-service

./: .env.example  .flaskenv  .gitignore  Dockerfile  README.md  behave.ini  docker-compose.yml  fly.toml  gunicorn_config.py  main.py  pyproject.toml  run.py
features/: cli.feature  environment.py  mocks.py  summary.feature  transcript_processing.feature  web_ui.feature
features/steps/: cli_steps.py  summary_steps.py  transcript_steps.py  web_steps.py
src/gemini_transcription_service/: config.py  exceptions.py  storage_handler.py  summary_generator.py  transcribe.py  transcript_processor.py  transcription_logic.py
src/gemini_transcription_service/webapp/: app.py
src/gemini_transcription_service/webapp/templates/: index.html
src/gemini_transcription_service/webapp/templates/partials/: _file_upload_form.html  _flash_messages.html  _scripts.html  _summary_display.html  _transcript_display.html
